[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot_table/Scripts/rowContainer.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_table/Scripts/TableContainer.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_table/Scripts/rowBtns.gd" type="Script" id=3]
[ext_resource path="res://addons/godot_table/Scripts/headerContainer.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="TableContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
custom_constants/separation = 0

[node name="headerContainer" type="GridContainer" parent="HBoxContainer"]
margin_right = 1024.0
size_flags_horizontal = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 4 )

[node name="PanelPlus" type="Panel" parent="HBoxContainer"]
margin_left = 1024.0
margin_right = 1024.0
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="rowContainer" type="GridContainer" parent="ScrollContainer/PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 1 )

[node name="rowBtns" type="VBoxContainer" parent="ScrollContainer/PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0
script = ExtResource( 3 )
